--- a/css/er.css
+++ b/css/er.css
@@ -1,78 +1,90 @@
 /* The modal (hidden by default) */
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0; 
-    top: 0;
-    width: 100%; 
-    height: 100%;
-    background: rgba(0,0,0,0.7);
-    overflow: auto;
-    padding: 10px;
-  }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0; 
+  top: 0;
+  width: 100%; 
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  overflow: auto;
+  padding: 10px;
+}
 
-  /* Modal box */
-  .modal-box {
-    background: #FFFBF6;
-    margin: 5% auto;
-    padding: 20px;
-    width: 80%;
-    max-width: 900px;
-    border-radius: 8px;
-    position: relative;
-  }
+/* Modal box */
+.modal-box {
+  background: #FFFBF6;
+  margin: 5% auto;
+  padding: 20px;
+  width: 80%;
+  max-width: 900px;
+  border-radius: 8px;
+  position: relative;
+}
 
-  .modal-content-flex {
-    display: flex;
-    align-items: center;
-    /* gap: 20px; */
-    padding: 0 auto;
-  }
+.modal-content-flex {
+  display: flex;
+  align-items: center;
+  /* gap: 20px; */
+  padding: 0 auto;
+}
 
-  .modal-left {
-    text-align: center;
-  }
+.modal-left {
+  text-align: center;
+}
 
-  .modal-left img {
-    border-radius: 6px;
-    padding: 20px 0px;
-  }
+.modal-left img {
+  border-radius: 6px;
+  padding: 20px 0px;
+}
 
-  .modal-right {
-    flex: 1;
-    text-align: center;
-    padding-right: 20px;
-  }
-  
-  .modal-right h5 {
-    text-transform: none;
-  }
-  
+.modal-right {
+  flex: 1;
+  text-align: center;
+  padding-right: 20px;
+}
 
-  /* Caption text */
-  #caption {
-    margin: 15px auto;
-    color: #000000;
-    font-size: 18px;
-  }
+.modal-right h5 {
+  text-transform: none;
+}
 
-  /* Close button */
-  .close {
-    position: absolute;
-    top: 5px;
-    right: 16px;
-    color: black;
-    font-size: 40px;
-    font-weight: bold;
-    cursor: pointer;
-  }
 
-  /* Small hover zoom on preview images */
-  .er img {
-    cursor: pointer;
-    transition: transform 0.2s;
-  }
-  .er img:hover {
-    transform: scale(1.05);
-  }
+/* Caption text */
+#caption {
+  margin: 15px auto;
+  color: #000000;
+  font-size: 18px;
+}
+
+
+.modal-content {
+  padding: 0 auto;
+}
+
+.arch-box {
+  margin: 30% auto;
+}
+
+
+
+
+/* Close button */
+.close, .closeBtn_arch {
+  position: absolute;
+  top: 5px;
+  right: 16px;
+  color: black;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* Small hover zoom on preview images */
+.er img {
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+.er img:hover {
+  transform: scale(1.05);
+}
