--- a/css/erGo.css
+++ b/css/erGo.css
@@ -35,9 +35,83 @@
   cursor: pointer;
 }
 
+.carousel-item {
+  cursor: pointer;
+}
+
+
+/* for modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0; 
+  top: 0;
+  width: 100%; 
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  overflow: auto;
+  padding: 10px;
+}
+
+/* Modal box */
+.modal-box {
+  background: #FFFBF6;
+  margin: 10% auto;
+  padding: 20px;
+  width: 80%;
+  max-width: 1500px;
+  max-height: 2500px;
+  border-radius: 8px;
+  position: relative;
+}
+
+.modal-box img {
+  max-width: 100%;
+  max-height: 100vh; /* prevents it from overflowing vertically */
+  width: auto;
+  height: auto;
+  display: block;
+  margin: 0 auto; /* center it */
+}
+
+
+.modal-content-flex {
+  align-items: center;
+  /* gap: 20px; */
+  padding: 0 auto;
+}
+
+.modal-left {
+  text-align: center;
+}
+
+.modal-left img {
+  border-radius: 6px;
+  padding: 20px 0px;
+}
+
+.modal-right {
+  flex: 1;
+  text-align: center;
+  padding-right: 20px;
+}
+
+.modal-right h5 {
+  text-transform: none;
+}
+
+.img-caption {
+  text-align: center;
+  font-size: 0.9rem;
+  margin-top: 6px;
+  color: #555;
+}
+
+
 
 /* Close button */
-.close, .closeBtn_arch {
+.close, .closeBtn_arch, .close_large {
   position: absolute;
   top: 5px;
   right: 16px;
